Get the basic elements to start off with

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>TypeScript App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
-  <body>
+  <body style=>
     <div id="app-root"></div>
     
     <script src="bundle.js" async defer></script>
